feat(affinity group): rename volume group feature to affinity group
